==> iNavFlight/inav/lib/main/ChibiOS/community/os/hal/ports/TIVA/LLD/MAC/hal_mac_lld.c <==
#include <string.h>
#include "hal.h"
#include "hal_mii.h"
#define BUFFER_SIZE ((((TIVA_MAC_BUFFERS_SIZE - 1) | 3) + 1) / 4)
#define MACMIIADDR_CR   (0x01 << 2)
#define MACMIIADDR_CR   (0x00 << 2)
#define MACMIIADDR_CR   (0x03 << 2)
#define MACMIIADDR_CR   (0x02 << 2)
#define EMAC_MIIADDR_MIIW       0x00000002  /* MII Write */
#define EMAC_MIIADDR_MIIB       0x00000001  /* MII Busy */

static void mii_write(MACDriver *macp, uint32_t reg, uint32_t value)
{
  HWREG(EMAC0_BASE + EMAC_O_MIIDATA) = value;
  HWREG(EMAC0_BASE + EMAC_O_MIIADDR) = macp->phyaddr | (reg << 6) | MACMIIADDR_CR | EMAC_MIIADDR_MIIW | EMAC_MIIADDR_MIIB;

  while ((HWREG(EMAC0_BASE + EMAC_O_MIIADDR) & EMAC_MIIADDR_MIIB) != 0)
    ;
}

static uint32_t mii_read(MACDriver *macp, uint32_t reg)
{
  HWREG(EMAC0_BASE + EMAC_O_MIIADDR) = macp->phyaddr | (reg << 6) | MACMIIADDR_CR | EMAC_MIIADDR_MIIB;

  while ((HWREG(EMAC0_BASE + EMAC_O_MIIADDR) & EMAC_MIIADDR_MIIB) != 0)
    ;

  return HWREG(EMAC0_BASE + EMAC_O_MIIDATA);
}

static void mii_find_phy(MACDriver *macp)
{
  uint32_t i;

#if TIVA_MAC_PHY_TIMEOUT > 0
  rtcnt_t start = chSysGetRealtimeCounterX();
  rtcnt_t timeout  = start + MS2RTC(STM32_HCLK,STM32_MAC_PHY_TIMEOUT);
  rtcnt_t time = start;
  while (chSysIsCounterWithinX(time, start, timeout)) {
#endif
    for (i = 0; i < 31; i++) {
      macp->phyaddr = i << 11;
      HWREG(EMAC0_BASE + EMAC_O_MIIDATA) = (i << 6) | MACMIIADDR_CR;
      if ((mii_read(macp, TIVA_ID1) == (BOARD_PHY_ID >> 16)) &&
          ((mii_read(macp, TIVA_ID2) & 0xFFF0) == (BOARD_PHY_ID & 0xFFF0))) {
        return;
      }
    }
#if TIVA_MAC_PHY_TIMEOUT > 0
    time = chSysGetRealtimeCounterX();
  }
#endif
  /* Wrong or defective board.*/
  osalSysHalt("MAC failure");
}

static void mac_lld_set_address(const uint8_t *p)
{
  /* MAC address configuration, only a single address comparator is used,
     hash table not used.*/
  HWREG(EMAC0_BASE + EMAC_O_ADDR0H)   = ((uint32_t)p[5] << 8) |
                  ((uint32_t)p[4] << 0);
  HWREG(EMAC0_BASE + EMAC_O_ADDR0L)   = ((uint32_t)p[3] << 24) |
                  ((uint32_t)p[2] << 16) |
                  ((uint32_t)p[1] << 8) |
                  ((uint32_t)p[0] << 0);
  HWREG(EMAC0_BASE + EMAC_O_ADDR1H)   = 0x0000FFFF;
  HWREG(EMAC0_BASE + EMAC_O_ADDR1L)   = 0xFFFFFFFF;
  HWREG(EMAC0_BASE + EMAC_O_ADDR2H)   = 0x0000FFFF;
  HWREG(EMAC0_BASE + EMAC_O_ADDR2L)   = 0xFFFFFFFF;
  HWREG(EMAC0_BASE + EMAC_O_ADDR3H)   = 0x0000FFFF;
  HWREG(EMAC0_BASE + EMAC_O_ADDR3L)   = 0xFFFFFFFF;
  HWREG(EMAC0_BASE + EMAC_O_HASHTBLH) = 0;
  HWREG(EMAC0_BASE + EMAC_O_HASHTBLL) = 0;
}

void mac_lld_init(void)
{
  uint8_t i;

  macObjectInit(&ETHD1);
  ETHD1.link_up = false;

  /* Descriptor tables are initialized in chained mode, note that the first
     word is not initialized here but in mac_lld_start().*/
  for (i = 0; i < TIVA_MAC_RECEIVE_BUFFERS; i++) {
    rd[i].rdes1 = TIVA_RDES1_RCH | TIVA_RDES1_RBS1(TIVA_MAC_BUFFERS_SIZE);
    rd[i].rdes2 = (uint32_t)rb[i];
    rd[i].rdes3 = (uint32_t)&rd[(i + 1) % TIVA_MAC_RECEIVE_BUFFERS];
  }
  for (i = 0; i < TIVA_MAC_TRANSMIT_BUFFERS; i++) {
    td[i].tdes1 = 0;
    td[i].tdes2 = (uint32_t)tb[i];
    td[i].tdes3 = (uint32_t)&td[(i + 1) % TIVA_MAC_TRANSMIT_BUFFERS];
  }

  /* Enable MAC clock */
  HWREG(SYSCTL_RCGCEMAC) = 1;
  while (HWREG(SYSCTL_PREMAC) != 0x01)
    ;

  /* Set PHYHOLD bit */
  HWREG(EMAC0_BASE + EMAC_O_PC) |= 1;

  /* Enable PHY clock */
  HWREG(SYSCTL_RCGCEPHY) = 1;
  while (HWREG(SYSCTL_PREPHY) != 0x01)
    ;

  /* Enable power to PHY */
  HWREG(SYSCTL_PCEPHY) |= 1;
  while (HWREG(SYSCTL_PREPHY) != 0x01)
    ;
#if BOARD_PHY_RMII
  HWREG(EMAC0_BASE + EMAC_O_PC) = EMAC_PHY_CONFIG | (0x04 << 28);
#else
  HWREG(EMAC0_BASE + EMAC_O_PC) = EMAC_PHY_CONFIG;
#endif

  /*
   * Write OHY led configuration.
   * 0: link ok
   * 1: tx activity
   * 2: link ok
   * blink rate: 20Hz
   */
  mii_write_extended(&ETHD1, TIVA_LEDCFG, (0 << 8) | (2 << 4) | (0 << 0));
  mii_write(&ETHD1, TIVA_LEDCR, (0 << 9));

  /* Set done bit after writing EMACPC register */
  mii_write(&ETHD1, TIVA_CFG1, (1 << 15) | mii_read(&ETHD1, TIVA_CFG1));

  while(HWREG(EMAC0_BASE + EMAC_O_DMABUSMOD) & 1)
    ;

  /* Reset MAC */
  HWREG(EMAC0_BASE + EMAC_O_DMABUSMOD) |= 1;
  while (HWREG(EMAC0_BASE + EMAC_O_DMABUSMOD) & 1)
    ;

  /* PHY address setup.*/
#if defined(BOARD_PHY_ADDRESS)
  ETHD1.phyaddr = BOARD_PHY_ADDRESS << 11;
#else
  mii_find_phy(&ETHD1);
#endif

#if defined(BOARD_PHY_RESET)
  /* PHY board-specific reset procedure.*/
  BOARD_PHY_RESET();
#else
  /* PHY soft reset procedure.*/
  mii_write(&ETHD1, MII_BMCR, BMCR_RESET);
#if defined(BOARD_PHY_RESET_DELAY)
  chSysPolledDelayX(BOARD_PHY_RESET_DELAY);
#endif
  while (mii_read(&ETHD1, MII_BMCR) & BMCR_RESET)
    ;
#endif

#if TIVA_MAC_CHANGE_PHY_STATE
  /* PHY in power down mode until the driver will be started.*/
  mii_write(&ETHD1, MII_BMCR, mii_read(&ETHD1, MII_BMCR) | BMCR_PDOWN);
#endif

  /* Disable MAC clock */
  HWREG(SYSCTL_RCGCEMAC) = 0;

  /* Disable PHY clock */
  HWREG(SYSCTL_RCGCEPHY) = 0;
}

void mac_lld_start(MACDriver *macp)
{
  uint8_t i;

  /* Resets the state of all descriptors.*/
  for (i = 0; i < TIVA_MAC_RECEIVE_BUFFERS; i++) {
    rd[i].rdes0 = TIVA_RDES0_OWN;
  }
  macp->rxptr = (tiva_eth_rx_descriptor_t *)rd;

  for (i = 0; i < TIVA_MAC_TRANSMIT_BUFFERS; i++) {
    td[i].tdes0 = TIVA_TDES0_TCH;
    td[i].locked = 0;
  }
  macp->txptr = (tiva_eth_tx_descriptor_t *)td;

  /* Enable MAC clock */
  HWREG(SYSCTL_RCGCEMAC) = 1;
  while (HWREG(SYSCTL_PREMAC) != 0x01)
    ;

  /* Enable PHY clock */
  HWREG(SYSCTL_RCGCEPHY) = 1;
  while (!HWREG(SYSCTL_PREPHY))
    ;

  /* ISR vector enabled.*/
  nvicEnableVector(TIVA_MAC_NUMBER, TIVA_MAC_IRQ_PRIORITY);

#if TIVA_MAC_CHANGE_PHY_STATE
  /* PHY in power up mode.*/
  mii_write(macp, MII_BMCR, mii_read(macp, MII_BMCR) & ~BMCR_PDOWN);
#endif

  /* MAC configuration.*/
  HWREG(EMAC0_BASE + EMAC_O_FRAMEFLTR) = 0;
  HWREG(EMAC0_BASE + EMAC_O_FLOWCTL) = 0;
  HWREG(EMAC0_BASE + EMAC_O_VLANTG) = 0;

  /* MAC address setup.*/
  if (macp->config->mac_address == NULL)
    mac_lld_set_address(default_mac_address);
  else
    mac_lld_set_address(macp->config->mac_address);

  /* Transmitter and receiver enabled.
     Note that the complete setup of the MAC is performed when the link
     status is detected.*/
#if TIVA_MAC_IP_CHECKSUM_OFFLOAD
  HWREG(EMAC0_BASE + EMAC_O_CFG) = (1 << 10) | (1 << 3) | (1 << 2);
#else
  HWREG(EMAC0_BASE + EMAC_O_CFG) =             (1 << 3) | (1 << 2);
#endif

  /* DMA configuration:
     Descriptor chains pointers.*/
  HWREG(EMAC0_BASE + EMAC_O_RXDLADDR) = (uint32_t)rd;
  HWREG(EMAC0_BASE + EMAC_O_TXDLADDR) = (uint32_t)td;

  /* Enabling required interrupt sources.*/
  HWREG(EMAC0_BASE + EMAC_O_DMARIS) &= 0xFFFF;
  HWREG(EMAC0_BASE + EMAC_O_DMAIM) = (1 << 16) | (1 << 6) | (1 << 0);

  /* DMA general settings.*/
  HWREG(EMAC0_BASE + EMAC_O_DMABUSMOD) = (1 << 25) | (1 << 17) | (1 << 8);

  /* Transmit FIFO flush.*/
  HWREG(EMAC0_BASE + EMAC_O_DMAOPMODE) = (1 << 20);
  while (HWREG(EMAC0_BASE + EMAC_O_DMAOPMODE) & (1 << 20))
    ;

  /* DMA final configuration and start.*/
  HWREG(EMAC0_BASE + EMAC_O_DMAOPMODE) = (1 << 26) | (1 << 25) | (1 << 21) |
                        (1 << 13) | (1 << 1);
}

void mac_lld_stop(MACDriver *macp)
{
  if (macp->state != MAC_STOP) {
#if TIVA_MAC_CHANGE_PHY_STATE
    /* PHY in power down mode until the driver will be restarted.*/
    mii_write(macp, MII_BMCR, mii_read(macp, MII_BMCR) | BMCR_PDOWN);
#endif

    /* MAC and DMA stopped.*/
    HWREG(EMAC0_BASE + EMAC_O_CFG) = 0;
    HWREG(EMAC0_BASE + EMAC_O_DMAOPMODE) = 0;
    HWREG(EMAC0_BASE + EMAC_O_DMAIM) = 0;
    HWREG(EMAC0_BASE + EMAC_O_DMARIS) &= 0xFFFF;

    /* MAC clocks stopped.*/
    HWREG(SYSCTL_RCGCEMAC) = 0;

    /* PHY clock stopped.*/
    HWREG(SYSCTL_RCGCEPHY) = 0;

    /* ISR vector disabled.*/
    nvicDisableVector(TIVA_MAC_NUMBER);
  }
}

msg_t mac_lld_get_transmit_descriptor(MACDriver *macp,
                                      MACTransmitDescriptor *tdp)
{
  tiva_eth_tx_descriptor_t *tdes;

  if (!macp->link_up)
    return MSG_TIMEOUT;

  osalSysLock();

  /* Get Current TX descriptor.*/
  tdes = macp->txptr;

  /* Ensure that descriptor isn't owned by the Ethernet DMA or locked by
     another thread.*/
  if (tdes->tdes0 & (TIVA_TDES0_OWN) || (tdes->locked)) {
    osalSysUnlock();
    return MSG_TIMEOUT;
  }

  /* Marks the current descriptor as locked.*/
  tdes->locked = 1;

  /* Next TX descriptor to use.*/
  macp->txptr = (tiva_eth_tx_descriptor_t *)tdes->tdes3;

  osalSysUnlock();

  /* Set the buffer size and configuration.*/
  tdp->offset   = 0;
  tdp->size     = TIVA_MAC_BUFFERS_SIZE;
  tdp->physdesc = tdes;

  return MSG_OK;
}

void mac_lld_release_transmit_descriptor(MACTransmitDescriptor *tdp)
{
  osalDbgAssert(!(tdp->physdesc->tdes0 & TIVA_TDES0_OWN),
              "attempt to release descriptor already owned by DMA");

  osalSysLock();

  /* Unlocks the descriptor and returns it to the DMA engine.*/
  tdp->physdesc->tdes1 = tdp->offset;
  tdp->physdesc->tdes0 = TIVA_TDES0_CIC(TIVA_MAC_IP_CHECKSUM_OFFLOAD) |
                         TIVA_TDES0_IC | TIVA_TDES0_LS | TIVA_TDES0_FS |
                         TIVA_TDES0_TCH | TIVA_TDES0_OWN;
  tdp->physdesc->locked = 0;

  /* If the DMA engine is stalled then a restart request is issued.*/
  if ((HWREG(EMAC0_BASE + EMAC_O_DMARIS) & (0x7 << 20)) == (6 << 20)) {
    HWREG(EMAC0_BASE + EMAC_O_DMARIS)   = (1 << 2);
    HWREG(EMAC0_BASE + EMAC_O_TXPOLLD) = 1; /* Any value is OK.*/
  }

  osalSysUnlock();
}

msg_t mac_lld_get_receive_descriptor(MACDriver *macp,
                                     MACReceiveDescriptor *rdp)
{
  tiva_eth_rx_descriptor_t *rdes;

  osalSysLock();

  /* Get Current RX descriptor.*/
  rdes = macp->rxptr;

  /* Iterates through received frames until a valid one is found, invalid
     frames are discarded.*/
  while (!(rdes->rdes0 & TIVA_RDES0_OWN)) {
    if (!(rdes->rdes0 & (TIVA_RDES0_AFM | TIVA_RDES0_ES))
#if TIVA_MAC_IP_CHECKSUM_OFFLOAD
        && (rdes->rdes0 & TIVA_RDES0_FT)
        && !(rdes->rdes0 & (TIVA_RDES0_IPHCE | TIVA_RDES0_PCE))
#endif
        && (rdes->rdes0 & TIVA_RDES0_FS) && (rdes->rdes0 & TIVA_RDES0_LS)) {
      /* Found a valid one.*/
      rdp->offset   = 0;
      rdp->size     = ((rdes->rdes0 & TIVA_RDES0_FL_MASK) >> 16) - 4;
      rdp->physdesc = rdes;
      macp->rxptr   = (tiva_eth_rx_descriptor_t *)rdes->rdes3;

      osalSysUnlock();
      return MSG_OK;
    }
    /* Invalid frame found, purging.*/
    rdes->rdes0 = TIVA_RDES0_OWN;
    rdes = (tiva_eth_rx_descriptor_t *)rdes->rdes3;
  }

  /* Next descriptor to check.*/
  macp->rxptr = rdes;

  osalSysUnlock();
  return MSG_TIMEOUT;
}

void mac_lld_release_receive_descriptor(MACReceiveDescriptor *rdp)
{
  osalDbgAssert(!(rdp->physdesc->rdes0 & TIVA_RDES0_OWN),
              "attempt to release descriptor already owned by DMA");

  osalSysLock();

  /* Give buffer back to the Ethernet DMA.*/
  rdp->physdesc->rdes0 = TIVA_RDES0_OWN;

  /* If the DMA engine is stalled then a restart request is issued.*/
  if ((HWREG(EMAC0_BASE + EMAC_O_STATUS) & (0xf << 17)) == (4 << 17)) {
    HWREG(EMAC0_BASE + EMAC_O_DMARIS)   = (1 << 7);
    HWREG(EMAC0_BASE + EMAC_O_TXPOLLD) = 1; /* Any value is OK.*/
  }

  osalSysUnlock();
}

bool mac_lld_poll_link_status(MACDriver *macp)
{
  uint32_t maccfg, bmsr, bmcr;

  maccfg = HWREG(EMAC0_BASE + EMAC_O_CFG);

  /* PHY CR and SR registers read.*/
  (void)mii_read(macp, MII_BMSR);
  bmsr = mii_read(macp, MII_BMSR);
  bmcr = mii_read(macp, MII_BMCR);

  /* Check on auto-negotiation mode.*/
  if (bmcr & BMCR_ANENABLE) {
    uint32_t lpa;

    /* Auto-negotiation must be finished without faults and link established.*/
    if ((bmsr & (BMSR_LSTATUS | BMSR_RFAULT | BMSR_ANEGCOMPLETE)) !=
        (BMSR_LSTATUS | BMSR_ANEGCOMPLETE))
      return macp->link_up = false;

    /* Auto-negotiation enabled, checks the LPA register.*/
    lpa = mii_read(macp, MII_LPA);

    /* Check on link speed.*/
    if (lpa & (LPA_100HALF | LPA_100FULL | LPA_100BASE4))
      maccfg |= (1 << 14);
    else
      maccfg &= ~(1 << 14);

    /* Check on link mode.*/
    if (lpa & (LPA_10FULL | LPA_100FULL))
      maccfg |= (1 << 11);
    else
      maccfg &= ~(1 << 11);
  }
  else {
    /* Link must be established.*/
    if (!(bmsr & BMSR_LSTATUS))
      return macp->link_up = false;

    /* Check on link speed.*/
    if (bmcr & BMCR_SPEED100)
      maccfg |= (1 << 14);
    else
      maccfg &= ~(1 << 14);

    /* Check on link mode.*/
    if (bmcr & BMCR_FULLDPLX)
      maccfg |= (1 << 11);
    else
      maccfg &= ~(1 << 11);
  }

  /* Changes the mode in the MAC.*/
  HWREG(EMAC0_BASE + EMAC_O_CFG) = maccfg;

  /* Returns the link status.*/
  return macp->link_up = true;
}
